# action-sample-cpp

./: .gitignore  README.md
.github/workflows/: C++ code linter (clang-tidy and cppcheck).yml  CPPCheck-annotations.yml  clang-tidy-check.yml  clang-tidy-review.yml  cmake.yml  codeql-analysis.yml  cppcheck-action.yml  cppcheck.yml
inc/cte/: processor.h
src/: CMakeLists.txt  main.cpp  processor.cpp
